fixes #3763 Adding widgets to the dashboard was not possible on mobile devices

--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -246,6 +246,7 @@
 
 .dashboardSettings.visible {
   z-index: 1020; /* More than .jqplot-seriespicker-popover (1010) */
+  min-width: 700px;
 }
 
 .dashboardSettings > span {
